fixing overflow-x

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -178,6 +178,10 @@ html {
   font-family: "Lato", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
